package com.globant.models;

public enum TransactionType {
    BUY, SELL
}
